refactor: 비즈니스 로직을 도메인으로 이동, dto와 vo 생성